# snake_game

./: .gitignore  CMakeLists.txt  README.md  fruit.cpp  fruit.h  main.cpp  scoreboard.cpp  scoreboard.h  snake.cpp  snake.h
